--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root, .App{
+  min-height: 100%;
+  background-color: #000;
+}
+
+.App{
+  overflow: hidden;
+}
+
+.favorite-btn{
+  display: inline-block;
+  position: absolute;
+  width: 180px;
+  height: 10%;
+  color: black;
+  border-radius: 50px;
+  background: linear-gradient(to right, rgba(223, 11, 11, 0.589), rgba(166, 231, 14, 0.856));
+  font-size: 20px;
+  color: white;
+  margin-left: 70px;
+}
+
+
+
+.favorite-btn:hover{
+  background: linear-gradient(to right, rgb(14, 13, 13), rgb(32, 21, 179));
 }
